data generator and selection sort has been added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 
 cmake_minimum_required(VERSION 3.4)
 
-set(CMAKE_C_COMPILER clang)
-set(CMAKE_CXX_COMPILER clang++)
+set(CMAKE_C_COMPILER gcc)
+set(CMAKE_CXX_COMPILER g++)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-everything")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-everything -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
 
 
 # for Clion's code inspection
@@ -12,6 +12,8 @@ FILE(GLOB FILES
         ./*.hpp
         ./*.cpp)
 
-set(SSORTOMP_SRC select_sort_omp.cpp ${FILES})
+set(SSORTOMP_SRC select_sort_omp.cpp)
+set(GEN_DATA_SRC generate_data.cpp)
 
 add_executable(ssort ${SSORTOMP_SRC})
+add_executable(gendata ${GEN_DATA_SRC})
